--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -37,15 +37,20 @@
                 android:layout_height="match_parent"
                 android:layout_centerHorizontal="true"
                 android:layout_gravity="center"
+                android:textColor="@color/black"
+                android:textStyle="bold"
                 android:gravity="center"
-                android:text="ini title" />
+                android:text="title" />
 
             <TextView
                 android:id="@+id/tv_cart"
                 android:layout_width="45dp"
                 android:layout_height="45dp"
                 android:layout_alignParentRight="true"
-                android:layout_margin="10dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="10dp"
+                android:layout_marginBottom="10dp"
                 android:background="@drawable/cart"
                 android:gravity="center" />
         </RelativeLayout>
