--- a/app/src/main/res/layout/cell_list_all_orders.xml
+++ b/app/src/main/res/layout/cell_list_all_orders.xml
@@ -5,85 +5,62 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    tools:ignore="Deprecated,HardcodedText,RtlSymmetry,SmallSp,RtlHardcoded,UselessParent">
+    tools:ignore="UselessLeaf,Deprecated,HardcodedText,RtlSymmetry,SmallSp,RtlHardcoded,UselessParent">
     <!--android:background="@drawable/round_rec_background_button_red"-->
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="70dp"
+        android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:background="@drawable/round_rec_0000_white"
-        android:orientation="horizontal">
+        android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/tv_kode"
-            android:layout_width="45dp"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="45dp"
             android:layout_gravity="center"
             android:layout_margin="5dp"
-            android:background="@drawable/round_rec_0000_light_orange"
             android:gravity="center"
-            android:text="B123AC"
-            android:textSize="12sp" />
-
-        <!--normal textSize="14sp"-->
-
-
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="5"
-            android:gravity="center_vertical"
-            android:orientation="vertical">
+            android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/tv_nama"
-                android:layout_width="match_parent"
+                android:id="@+id/tv_total_price"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="Barang" />
+                android:layout_marginLeft="10dp"
+                android:layout_weight="3"
+                android:text="$ 2315.98"
+                android:textColor="@color/black" />
 
-            <LinearLayout
-                android:layout_width="match_parent"
+            <TextView
+                android:id="@+id/tv_tanggal_order"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Stock : " />
-
-                <TextView
-                    android:id="@+id/tv_stok"
-                    android:layout_width="35dp"
-                    android:layout_marginRight="10dp"
-                    android:layout_height="wrap_content"
-                    android:text="9999" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Price : Rp " />
-
-                <TextView
-                    android:id="@+id/tv_harga"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="0" />
-            </LinearLayout>
+                android:layout_marginRight="10dp"
+                android:layout_weight="7"
+                android:gravity="right"
+                android:text="8th December 2021, 09.24"
+                android:textColor="@color/black" />
         </LinearLayout>
 
         <TextView
-            android:id="@+id/btn_add"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_gravity="center"
-            android:layout_marginRight="10dp"
-            android:background="@drawable/round_rec_0000_blue2"
+            android:id="@+id/btn_show_details"
+            android:layout_width="match_parent"
+            android:layout_height="45dp"
             android:gravity="center"
-            android:text="+"
-            android:textSize="25sp" />
+            android:textColor="@color/text_color" />
+        <!--normal textSize="14sp"-->
+        <LinearLayout
+            android:id="@+id/ll_child"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginBottom="10dp"
+            android:gravity="center"
+            android:orientation="vertical" />
     </LinearLayout>
-
 </LinearLayout><!--
   <View
         android:layout_width="match_parent"
